# TallerAIInterview

./: .mcp.json  CLAUDE.md  README.md
.claude/: settings.json
.claude/commands/: review.md  test-for.md
.claude/hooks/: notify.sh  post-edit-format.sh
.claude/skills/: database-migrations.md
examples/claude-md-templates/: backend-api.CLAUDE.md  monorepo-root.CLAUDE.md  python-ml.CLAUDE.md  react-frontend.CLAUDE.md
learning/: ClawBot-Style-Memory.ts  GraphConstruction.ts  GraphRAGPipeLine.ts  model.ts  vectorMemory.ts
mcp-project-manager/: .mcp.json  README.md  db.py  pyproject.toml  server.py  sse_server.py
notes/: 01-claude-code-deep-dive.md  02-claude-md-best-practices.md  03-hooks-commands-skills.md  04-mcp-servers.md  05-context-engineering.md  06-in-class-brief.md
